// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSheet Render without Crashing 1`] = `
<body>
  <div />
  <ui5-responsive-popover
    aria-modal="true"
    class="ActionSheet-actionSheet myCustomClass"
    data-actionsheet="true"
    horizontal-align="Center"
    placement-type="Right"
    role="dialog"
    ui5-responsive-popover=""
    vertical-align="Center"
  >
    <div
      aria-label="Available Actions"
      data-component-name="ActionSheetMobileContent"
      role="presentation"
    >
      <ui5-button
        aria-label="{0} of {1} Accept"
        data-action-btn-index="0"
        design="Transparent"
        role="button"
        tabindex="0"
        ui5-button=""
      >
        Accept
      </ui5-button>
      <ui5-button
        aria-label="{0} of {1} Reject"
        data-action-btn-index="1"
        design="Transparent"
        role="button"
        tabindex="-1"
        ui5-button=""
      >
        Reject
      </ui5-button>
      <ui5-button
        aria-label="{0} of {1} This is my super long text!"
        data-action-btn-index="2"
        design="Transparent"
        role="button"
        tabindex="-1"
        ui5-button=""
      >
        This is my super long text!
      </ui5-button>
    </div>
  </ui5-responsive-popover>
</body>
`;

exports[`ActionSheet does not crash with other component 1`] = `
<body>
  <div />
  <ui5-responsive-popover
    aria-modal="true"
    class="ActionSheet-actionSheet"
    data-actionsheet="true"
    horizontal-align="Center"
    placement-type="Right"
    role="dialog"
    ui5-responsive-popover=""
    vertical-align="Center"
  >
    <div
      aria-label="Available Actions"
      data-component-name="ActionSheetMobileContent"
      role="presentation"
    >
      <ui5-label
        aria-label="1 of 1 I should not crash"
        data-action-btn-index="0"
        design="Transparent"
        role="button"
        tabindex="0"
        ui5-label=""
      >
        I should not crash
      </ui5-label>
    </div>
  </ui5-responsive-popover>
</body>
`;
